dark mode fix

--- a/src/NoForm.css
+++ b/src/NoForm.css
@@ -2,12 +2,15 @@
   width: 300px;
   height: 100px;
 }
-.submitButton{
-    background-color: blue;
-    color: white;
+
+.submitButton {
+  background-color: blue;
+  color: white;
 }
-.disableButton{
-    background-color: grey;
+
+.disableButton {
+  background-color: grey;
+  color: white; /* ensures readable text in light mode */
 }
 
 @media (prefers-color-scheme: dark) {
